build: fix detection of USDT support on macOS and generate `probes.h`
- Partially revert #22238 as after the macOS USDT support, just checking
for the `sys/sdt.h` header is enough.
- Generate `util/probes.h` during build time when supported.

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ libtool
 src/config/bitcoin-config.h
 src/config/bitcoin-config.h.in
 src/config/stamp-h1
+src/util/probes.h
 src/obj
 share/setup.nsi
 share/qt/Info.plist
