--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,16 +25,15 @@ BENCHMARKS =
 
 SYSCOIN_INCLUDES=-I$(builddir) -I$(srcdir)/$(MINISKETCH_INCLUDE_DIR_INT) -I$(srcdir)/secp256k1/include -I$(srcdir)/$(UNIVALUE_INCLUDE_DIR_INT) $(BOOST_CPPFLAGS) $(LEVELDB_CPPFLAGS)
 SYSCOIN_INCLUDES += $(LIBCHIABLS_CFLAGS)
-SYSCOIN_INCLUDES += $(LIBCURL_CFLAGS)
 
 
 if EMBEDDED_CHIABLS
 LIBCHIA = bls-dash/build/src/libbls-dash.a
-LIBCHIABLS =$(LIBCURL_LIBS) $(LIBCHIA) $(LIBRELIC_LIBS) $(GMP_LIBS)
+LIBCHIABLS =$(LIBCHIA) $(LIBRELIC_LIBS) $(GMP_LIBS)
 $(LIBCHIA):
 	cd $(srcdir)/bls-dash/build && $(MAKE) $(AM_MAKEFLAGS)
 else
-LIBCHIABLS =$(LIBCURL_LIBS) $(LIBCHIABLS_LIBS) $(LIBRELIC_LIBS) $(GMP_LIBS)
+LIBCHIABLS =$(LIBCHIABLS_LIBS) $(LIBRELIC_LIBS) $(GMP_LIBS)
 endif
 
 LIBSYSCOIN_NODE=libsyscoin_node.a
