--- a/configure.ac
+++ b/configure.ac
@@ -1953,6 +1953,7 @@ AC_SUBST(SYSCOIN_TX_NAME)
 AC_SUBST(SYSCOIN_UTIL_NAME)
 AC_SUBST(SYSCOIN_CHAINSTATE_NAME)
 AC_SUBST(SYSCOIN_WALLET_TOOL_NAME)
+AC_SUBST(SYSCOIN_GETH)
 AC_SUBST(SYSCOIN_MP_NODE_NAME)
 AC_SUBST(SYSCOIN_MP_GUI_NAME)
 
