--- a/src/.bear-tidy-config
+++ b/src/.bear-tidy-config
@@ -4,7 +4,9 @@
       "include_only_existing_source": true,
       "paths_to_include": [],
       "paths_to_exclude": [
-        "src/leveldb"
+        "src/leveldb",
+        "src/minisketch",
+        "src/secp256k1"
       ]
     },
     "format": {
