build: Use Link Time Optimization in Qt code for Darwin hosts

--- a/depends/patches/qt/mac-qmake.conf
+++ b/depends/patches/qt/mac-qmake.conf
@@ -18,5 +18,6 @@ QMAKE_MAC_SDK.macosx.PlatformPath = /phony
 !host_build: QMAKE_CXXFLAGS += -target $${MAC_TARGET}
 !host_build: QMAKE_LFLAGS += -target $${MAC_TARGET}
 QMAKE_AR = $${CROSS_COMPILE}ar cq
+QMAKE_AR_LTCG = llvm-ar cqs
 QMAKE_RANLIB=$${CROSS_COMPILE}ranlib
 load(qt_config)
