--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -263,6 +263,7 @@ task:
     image: family/ubuntu-2204-lts # when upgrading, check if we can drop "ADD_UNTRUSTED_BPFCC_PPA"
     cpu: 4
     memory: 12G
+    disk: 200
   env:
     << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
     HOME: /root/  # Only needed for compute_engine_instance
