--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1162,12 +1162,21 @@ dist_bin_SCRIPTS =
 if TARGET_WINDOWS
 dist_bin_SCRIPTS += bin/windows/sysgeth.exe
 endif
-if TARGET_DARWIN
-dist_bin_SCRIPTS += bin/darwin/sysgeth
+if TARGET_X86_64_DARWIN
+dist_bin_SCRIPTS += bin/darwin/x86_64/sysgeth
 endif
-if TARGET_LINUX
-dist_bin_SCRIPTS += bin/linux/sysgeth
+# if TARGET_ARM64_DARWIN
+# dist_bin_SCRIPTS += bin/darwin/arm64/sysgeth
+# endif
+if TARGET_X86_64_LINUX
+dist_bin_SCRIPTS += bin/linux/x86_64/sysgeth
 endif
+# if TARGET_ARM_LINUX
+# dist_bin_SCRIPTS += bin/linux/arm/sysgeth
+# endif
+# if TARGET_AARCH64_LINUX
+# dist_bin_SCRIPTS += bin/linux/aarch64/sysgeth
+# endif
 
 
 CTAES_DIST =  crypto/ctaes/bench.c
