docker: fix gitian support, optimize container layer count and improve script consistency (#4983)
* contrib: set the working directory to /src/dash to allow for cloning gitian dependencies

* contrib: place the home directory inside /home instead of root

* contrib: add notes about sharing ccache across the network

* contrib: chown based on the (u/g)id env vars instead of the associated username

* contrib: reduce layer count by reducing run invocations

* contrib: develop container cleanup and maintenance

- add apt-cacher-ng, gpg, lsb-release, screen as a package dependencies
- reorder packages in alphabetical order
- correct documentation
- create and add user to the docker group to satisfy Gitian's needs
- reduce the number of RUN calls to reduce layer count

--- a/contrib/containers/ci/Dockerfile
+++ b/contrib/containers/ci/Dockerfile
@@ -53,7 +53,7 @@ ARG GROUP_ID=1000
 ENV USER_ID ${USER_ID}
 ENV GROUP_ID ${GROUP_ID}
 RUN groupadd -g ${GROUP_ID} dash
-RUN useradd -u ${USER_ID} -g dash -s /bin/bash -m -d /dash dash
+RUN useradd -u ${USER_ID} -g dash -s /bin/bash -m -d /home/dash dash
 
 # Packages needed for all target builds
 RUN apt-get update && apt-get install $APT_ARGS \
@@ -101,14 +101,16 @@ RUN \
   update-alternatives --set x86_64-w64-mingw32-g++  /usr/bin/x86_64-w64-mingw32-g++-posix; \
   exit 0
 
-RUN mkdir /dash-src && \
+RUN \
+  mkdir -p /src/dash && \
   mkdir -p /cache/ccache && \
   mkdir /cache/depends && \
   mkdir /cache/sdk-sources && \
-  chown $USER_ID:$GROUP_ID /dash-src && \
-  chown $USER_ID:$GROUP_ID /cache && \
-  chown $USER_ID:$GROUP_ID /cache -R
+  chown ${USER_ID}:${GROUP_ID} /src && \
+  chown ${USER_ID}:${GROUP_ID} -R /src && \
+  chown ${USER_ID}:${GROUP_ID} /cache && \
+  chown ${USER_ID}:${GROUP_ID} -R /cache
 
-WORKDIR /dash-src
+WORKDIR /src/dash
 
 USER dash
