--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -80,6 +80,10 @@ BITCOIN_TESTS =\
   test/blockfilter_index_tests.cpp \
   test/blockfilter_tests.cpp \
   test/bloom_tests.cpp \
+  test/blsct/arith/elements_tests.cpp \
+  test/blsct/arith/g1point_tests.cpp \
+  test/blsct/arith/scalar_tests.cpp \
+  test/blsct/arith/bls_arith_integration_tests.cpp \
   test/bswap_tests.cpp \
   test/checkqueue_tests.cpp \
   test/coins_tests.cpp \
