--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -139,6 +139,7 @@ BITCOIN_CORE_H = \
   blsct/arith/g1point.h \
   blsct/arith/mcl_initializer.h \
   blsct/arith/scalar.h \
+  blsct/keys.h \
   chain.h \
   chainparams.h \
   chainparamsbase.h \
@@ -371,6 +372,7 @@ libbitcoin_node_a_SOURCES = \
   blsct/arith/g1point.cpp \
   blsct/arith/mcl_initializer.cpp \
   blsct/arith/scalar.cpp \
+  blsct/keys.cpp \
   chain.cpp \
   consensus/tx_verify.cpp \
   dbwrapper.cpp \
@@ -899,6 +901,7 @@ libbitcoinkernel_la_SOURCES = \
   blsct/arith/g1point.cpp \
   blsct/arith/mcl_initializer.cpp \
   blsct/arith/scalar.cpp \
+  blsct/keys.cpp \
   chain.cpp \
   chainparamsbase.cpp \
   chainparams.cpp \
