--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -82,6 +82,8 @@ $(LIBBLS):
 		CXXFLAGS='$(CXXFLAGS)' \
 		LDFLAGS='$(LDFLAGS)' \
 		ARFLAGS='$(ARFLAGS)' \
+		AR='$(AR)' \
+		RANLIB='$(RANLIB)' \
 		$(MAKE) $(AM_MAKEFLAGS) -C bls lib/libbls384_256.a
 
 $(LIBMCL):
@@ -93,6 +95,8 @@ $(LIBMCL):
 		CXXFLAGS='$(CXXFLAGS)' \
 		LDFLAGS='$(LDFLAGS)' \
 		ARFLAGS='$(ARFLAGS)' \
+		AR='$(AR)' \
+		RANLIB='$(RANLIB)' \
 		$(MAKE) $(AM_MAKEFLAGS) -C bls/mcl lib/libmcl.a
 
 # Make is not made aware of per-object dependencies to avoid limiting building parallelization
