--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -78,12 +78,8 @@ $(LIBBLS):
 	$(AM_V_at) \
 		CC='$(CC)' \
 		CXX='$(CXX)' \
-		CPPFLAGS='$(CPPFLAGS)' \
-		CXXFLAGS='$(CXXFLAGS)' \
+		CFLAGS='$(CXXFLAGS)' \
 		LDFLAGS='$(LDFLAGS)' \
-		ARFLAGS='$(ARFLAGS)' \
-		AR='$(AR)' \
-		RANLIB='$(RANLIB)' \
 		$(MAKE) $(AM_MAKEFLAGS) -C bls lib/libbls384_256.a
 
 $(LIBMCL):
@@ -91,12 +87,8 @@ $(LIBMCL):
 		MCL_USE_LLVM=0 \
 		CC='$(CC)' \
 		CXX='$(CXX)' \
-		CPPFLAGS='$(CPPFLAGS)' \
-		CXXFLAGS='$(CXXFLAGS)' \
+		CFLAGS='$(CXXFLAGS)' \
 		LDFLAGS='$(LDFLAGS)' \
-		ARFLAGS='$(ARFLAGS)' \
-		AR='$(AR)' \
-		RANLIB='$(RANLIB)' \
 		$(MAKE) $(AM_MAKEFLAGS) -C bls/mcl lib/libmcl.a
 
 # Make is not made aware of per-object dependencies to avoid limiting building parallelization
