Added support for 32bit builds for herumi mcl and bls libs

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -76,6 +76,7 @@ $(LIBSECP256K1): $(wildcard secp256k1/src/*.h) $(wildcard secp256k1/src/*.c) $(w
 
 $(LIBBLS):
 	$(AM_V_at) \
+		ARCH='$(firstword $(subst -, ,$(HOST)))' \
 		CC='$(CC)' \
 		CXX='$(CXX)' \
 		CFLAGS='$(CXXFLAGS)' \
@@ -88,6 +89,7 @@ $(LIBBLS):
 $(LIBMCL):
 	$(AM_V_at) \
 		MCL_USE_LLVM=0 \
+		ARCH='$(firstword $(subst -, ,$(HOST)))' \
 		CC='$(CC)' \
 		CXX='$(CXX)' \
 		CFLAGS='$(CXXFLAGS)' \
