--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -85,6 +85,7 @@ $(LIBBLS):
 		AR='$(AR)' \
 		RANLIB='$(RANLIB)' \
 		$(MAKE) $(AM_MAKEFLAGS) -C bls lib/libbls384_256.a
+	$(RANLIB) bls/lib/libbls384_256.a
 
 $(LIBMCL):
 	$(AM_V_at) \
@@ -98,6 +99,7 @@ $(LIBMCL):
 		AR='$(AR)' \
 		RANLIB='$(RANLIB)' \
 		$(MAKE) $(AM_MAKEFLAGS) -C bls/mcl lib/libmcl.a
+	$(RANLIB) bls/mcl/lib/libmcl.a
 
 # Make is not made aware of per-object dependencies to avoid limiting building parallelization
 # But to build the less dependent modules first, we manually select their order here:
