--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -480,6 +480,12 @@ libsyscoin_node_a_SOURCES = \
   services/rpc/assetrpc.cpp \
   core_write.cpp \
   dsnotificationinterface.cpp \
+  governance/governance.cpp \
+  governance/governanceclasses.cpp \
+  governance/governanceobject.cpp \
+  governance/governancevalidators.cpp \
+  governance/governancevote.cpp \
+  governance/governancevotedb.cpp \
   evo/cbtx.cpp \
   evo/deterministicmns.cpp \
   evo/evodb.cpp \
@@ -794,12 +800,6 @@ libsyscoin_common_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 libsyscoin_common_a_SOURCES = \
   services/asset.cpp \
   services/assetconsensus.cpp \
-  governance/governance.cpp \
-  governance/governanceclasses.cpp \
-  governance/governanceobject.cpp \
-  governance/governancevalidators.cpp \
-  governance/governancevote.cpp \
-  governance/governancevotedb.cpp \
   auxpow.cpp \
   base58.cpp \
   bech32.cpp \
@@ -991,17 +991,7 @@ syscoin_wallet_SOURCES += init/syscoin-wallet.cpp
 syscoin_wallet_CPPFLAGS = $(syscoin_bin_cppflags)
 syscoin_wallet_CXXFLAGS = $(syscoin_bin_cxxflags)
 syscoin_wallet_LDFLAGS = $(syscoin_bin_ldflags)
-syscoin_wallet_LDADD = \
-  $(LIBSYSCOIN_WALLET_TOOL) \
-  $(LIBSYSCOIN_WALLET) \
-  $(LIBSYSCOIN_COMMON) \
-  $(LIBSYSCOIN_UTIL) \
-  $(LIBUNIVALUE) \
-  $(LIBSYSCOIN_CONSENSUS) \
-  $(LIBSYSCOIN_CRYPTO) \
-  $(LIBSECP256K1) \
-  $(BDB_LIBS) \
-  $(SQLITE_LIBS)
+syscoin_wallet_LDADD = $(LIBSYSCOIN_NODE) $(syscoin_bin_ldadd)
 
 if TARGET_WINDOWS
 syscoin_wallet_SOURCES += syscoin-wallet-res.rc
